# hass-listonic

./: .gitignore  API.md  CLAUDE.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: test.yml
custom_components/listonic/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  strings.json  todo.py
custom_components/listonic/translations/: en.json
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_init.py  test_integration.py  test_todo.py
